base/immich/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-traffic
  namespace: immich
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
